# the_secrets_of_rust

./: .gitignore
application_counter/: Cargo.toml  big_file.txt
application_counter/src/: lib.rs  main.rs
application_counter/tests/: integration.rs
application_counter/tests/data/: mock_file.txt  mock_file_b.txt
application_logbook/: Cargo.toml  logbook.txt
application_logbook/src/: lib.rs  main.rs
application_logbook/tests/data/: logbook_file.txt
application_memos/: Cargo.toml  memos.json
application_memos/src/: lib.rs  main.rs
application_memos/tests/data/: memos_mock.json
