[package]
name = "logbook"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = """
Record observations in a logbook file, or list previous observations.
"""
keywords = ["cli", "utility", "text"]
categories = ["command-line-utilities"]
repository = "https://github.com/HolmesAyala/the_secrets_of_rust"
rust-version = "1.93.0"

[dependencies]
anyhow = "1.0.102"

[dev-dependencies]
tempfile = "3.26.0"
